test/libsolidity/syntaxTests/pragma/broken_version_2.sol
pragma solidity pragma;
// ----
// ParserError 1684: (0-23): Found version pragma, but failed to parse it. Please ensure there is a trailing semicolon.
